--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
   
   <link rel="stylesheet" type="text/css" href="style.css">
 
+
 </head>
-<body>
+<body background="background.jpg">
     <center>
     <h1 class="btn btn-info">Object Detection</h1>
-    <h3 id="status"></h3>
+    <h3 class = "btn btn-danger" id="status"></h3>
+    <h3 class="btn btn-success">The model has detected 2 objects out of 10</h3>
 
     
 </center>
